Updae on the survey router

--- a/pithermo/views/index.jade
+++ b/pithermo/views/index.jade
@@ -2,7 +2,4 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{s}
-  div
-  - console.log(title)
-  div
+  p At the moment the temperature is #{avgTemperature}° in the room
