Added locale strings

--- a/pithermo/views/index.jade
+++ b/pithermo/views/index.jade
@@ -4,4 +4,4 @@ block content
   header
     img.weather-icon(src="/images/sun.svg")
     h1.temperature #{avgTemperature}° 
-    p 10 last minutes average
+    p Last survey @ #{lastSurvey}
