--- a/pithermo/public/stylesheets/style.css
+++ b/pithermo/public/stylesheets/style.css
@@ -22,7 +22,7 @@ h1.temperature {
   font-weight: 300;
   margin-left: 25px;
   line-height: 1;
-  margin-top: 9px;
+  margin-top: 5px;
   letter-spacing: -1px;
   margin-bottom: 0;
 }
@@ -32,4 +32,5 @@ header p {
   margin-top: 0;
   width: 250px;
   text-align: left;
+  font-size: 0.9em;
 }
