--- a/pithermo/views/layout.jade
+++ b/pithermo/views/layout.jade
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/chartist/0.11.0/chartist.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Chakra+Petch:300')
+    link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='apple-touch-icon', sizes='57x57', href='/images/icons/apple-icon-57x57.png')
     link(rel='apple-touch-icon', sizes='60x60', href='/images/icons/apple-icon-60x60.png')
     link(rel='apple-touch-icon', sizes='72x72', href='/images/icons/apple-icon-72x72.png')
@@ -18,5 +19,6 @@ html
     link(rel='icon' type='image/png', sizes='96x96', href='/images/icons/favicon-96x96.png')
     link(rel='icon' type='image/png', sizes='16x16', href='/images/icons/favicon-16x16.png')
     link(rel='manifest', href='/manifest.json')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/chartist/0.11.0/chartist.min.js')
   body
     block content
