Added 24h in the graph

--- a/pithermo/views/index.jade
+++ b/pithermo/views/index.jade
@@ -14,6 +14,7 @@ block content
             [#{graph}]
           ]
         }, {
-          low: 0,
+          low: 18,
+          high: 21,
           showArea: true
         }); 
