Added dates as labels

--- a/pithermo/views/index.jade
+++ b/pithermo/views/index.jade
@@ -9,12 +9,15 @@ block content
     div(class="ct-chart")
       script.
         new Chartist.Line('.ct-chart', {
-          //labels: [1, 2, 3, 4, 5, 6, 7, 8],
+          labels: [#{timeArray}],
           series: [
             [#{graph}]
           ]
         }, {
           low: 18,
           high: 21,
-          showArea: true
+          showArea: true,
+          plugins: [
+            Chartist.plugins.tooltip()
+          ]
         }); 
