Removed bugged tooltip addon

--- a/pithermo/views/index.jade
+++ b/pithermo/views/index.jade
@@ -16,8 +16,5 @@ block content
         }, {
           low: 18,
           high: 21,
-          showArea: true,
-          plugins: [
-            Chartist.plugins.tooltip()
-          ]
+          showArea: true
         }); 
