--- a/pithermo/views/index.jade
+++ b/pithermo/views/index.jade
@@ -9,7 +9,7 @@ block content
     div(class="ct-chart")
       script.
         new Chartist.Line('.ct-chart', {
-          labels: [#{timeArray}],
+          //labels: [#{timeArray}],
           series: [
             [#{graph}]
           ]
