--- a/pithermo/views/layout.jade
+++ b/pithermo/views/layout.jade
@@ -19,6 +19,7 @@ html
     link(rel='icon' type='image/png', sizes='96x96', href='/images/icons/favicon-96x96.png')
     link(rel='icon' type='image/png', sizes='16x16', href='/images/icons/favicon-16x16.png')
     link(rel='manifest', href='/manifest.json')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/chartist/0.11.0/chartist.min.js')
   body
     block content
